worked on spacing and fixing specificity issues... Struggled

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,14 +12,13 @@ body {
 
 // THIS SECTION MOSTLY ACTS AS THE BACKGROUND FOR THE LIGHT TEAL TOP PART OF THE PAGE 
 
-.top_teal{
-  //@include center();
+.top_teal {
   @include col(12/12);
   background-color: #D6F1F0;
   margin: -10px 0px;
 }
 
- ul {
+ul {
   @include col(3/4);    // THIS SAYS THAT THE UL WILL TAKE UP THREE QUARTERS OF THE PARENT
   @include shift(1/8);  //  THIS MOVES THE LIST OVER BY 1 COLUMN
   text-align: right;
@@ -64,30 +63,26 @@ li {
     @include breakpoint(tablet) {
       @include stack();
     }
-      ul {  
-        padding: 0%;
-        width: 100%;
+    ul {  
+      padding: 0px;
+      width: 100%;
+      position: center;
+    }
 
-      }
-
-      li {
-        @include cf();
-        @include col(1/4 1/2 4/5);    // EACH LIST ITEM IS GOING TO OCCUPY ONE -- OF FOUR -- COLUMNS
-        list-style: none;
-        display: inline;
-        font-family: 'Helvetica';
-        font-weight: lighter;
-        font-size: 16px;
-        color: #5FAEB4;
-        text-align: center;
-        border-radius: 50px;
-        padding: 1% 1% 0.4% 1%;
-        margin: 0 0.15%;
-
-        a {
-          
-        }  
-      }
+    li {
+      @include cf();
+      @include col(1/4 1/2 4/5);    // EACH LIST ITEM IS GOING TO OCCUPY ONE -- OF FOUR -- COLUMNS
+      list-style: none;
+      display: inline;
+      font-family: 'Helvetica';
+      font-weight: lighter;
+      font-size: 16px;
+      color: #5FAEB4;
+      text-align: center;
+      border-radius: 50px;
+      padding: 1% 1% 0.4% 1%;
+      margin: 0 0.15%;  
+    }
   }
 
   li:nth-child(1) {      // THIS SECTION IS STYLING THE FAKE "BUTTONS" IN THE LIST AT THE TOP
@@ -111,9 +106,15 @@ li {
 // THIS SECTION IS THE BOTTOM HALF OF THE SECOND COLUMN IN THE TOP WHITE SECTION
 
   .tw_3 {
-    @include col(1/2 4/5);  // AGAIN, THE FIRST FRACTION IS THE AMOUNT OF THE PARENT THAT THIS COLUMN TAKES
+    @include span(1/2);  // AGAIN, THE FIRST FRACTION IS THE AMOUNT OF THE PARENT THAT THIS COLUMN TAKES
     @include breakpoint(tablet) {
       @include stack();
+    }
+    height: 50%;
+    vertical-align: middle;
+    img {
+    vertical-align: middle;
+    max-width: 100%;
     }                  // THE SECOND FRACTION TELLS HOW MUCH -- IN TOTAL -- THE PARENT DIV (TOP_WHITE) TAKES UP
   }
 }
@@ -135,6 +136,8 @@ li {
     text-align: center;
     padding: 3px 0px 0px 0px;
     margin: 2px;
+    
+
  
   li {            
     @include col(2.25/12 12/12);
@@ -142,6 +145,7 @@ li {
     display: inline;
     color: #6E0F47;
     margin: 0px;
+    white-space: nowrap;
     padding: 9px 0px 0px 0px;
     // border-radius: 50px 50px 50px 50px;
 
